index.html 경로수정
index.html 경로수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Layout</title>
-	<link rel="stylesheet" href="./css/css.css" />
+	<link rel="stylesheet" href="./포트폴리오/css/css.css" />
 </head>
 <body>
     <input class="goupbtn" type="button" value="top" onclick="window.scrollTo(0,0);"></div>
