이미지 파일 경로 수정
이미지 파일 경로 수정

--- a/index.html
+++ b/index.html
@@ -50,34 +50,34 @@
     </header>
     
     <div class="profile">
-        <img src="img/llink.png" alt="img">
+        <img src="./포트폴리오/img/llink.png" alt="img">
         <div>ABOUT ME</div>
     </div>
 
 	<div class="box-wrapper">
 		<div class="box">
-            <img src="img/이름.svg" alt="img">
+            <img src="./포트폴리오/img/이름.svg" alt="img">
             <div>
 			    <h3 class="title">이름</h3>
 			    <div class="desc">이동원</div>
             </div>
 		</div>
 		<div class="box">
-            <img src="img/생년월일.svg" alt="img">
+            <img src="./포트폴리오/img/생년월일.svg" alt="img">
             <div>
 			    <h3 class="title">생년월일</h3>
 			    <div class="desc">1996.09.01</div>
             </div>
 		</div>
 		<div class="box">
-            <img src="img/주소지.svg" alt="img">
+            <img src="./포트폴리오/img/주소지.svg" alt="img">
             <div>
 			    <h3 class="title">주소지</h3>
 			    <div class="desc">경기도 안양시</div>
             </div>
 		</div>
         <div class="box">
-            <img src="img/이메일.svg" alt="img">
+            <img src="./포트폴리오/img/이메일.svg" alt="img">
             <div>
 			    <h3 class="title">이메일</h3>
 			    <div class="desc">22ehd22@naver.com</div>
@@ -87,21 +87,21 @@
     
     <div class="second">
         <div class="skills">
-            <img src="img/llink.png" alt="img">
+            <img src="./포트폴리오/img/llink.png" alt="img">
             SKILLS
         </div>
         <div class="skillsimg">
-            <img src="img/skills.png" alt="img">
+            <img src="./포트폴리오/img/skills.png" alt="img">
         </div>
     </div>
 
     <div class="third">
         <div class="archiving">
-            <img src="img/llink.png" alt="img">
+            <img src="./포트폴리오/img/llink.png" alt="img">
             ARCHIVING
         </div>
         <div class="github">
-            <img src="img/github.png" alt="img">
+            <img src="./포트폴리오/img/github.png" alt="img">
             <div>
                 <a href="https://github.com/22ehd22">github.com/22ehd22</a>
             </div>
@@ -122,7 +122,7 @@
 
     <div class="projects">
         <div class="projecttitle">
-            <img src="img/llink.png" alt="img">
+            <img src="./포트폴리오/img/llink.png" alt="img">
             <div>PROJECTS</div>
         </div>
         <div class="project_main">
@@ -134,7 +134,7 @@
             </div>
             <div class="project_sub">
                 <div class="project_img">
-                   <img src="img/stack.png">
+                   <img src="./포트폴리오/img/stack.png">
                 </div>
                 <div class="project_detail">
                     <div>
@@ -179,7 +179,7 @@
             </div>
                 <div class="project_sub">
                 <div class="project_img">
-                <img src="img/보배빌림.png">
+                <img src="./포트폴리오/img/보배빌림.png">
             </div>
             <div class="project_detail">
                 <div>
@@ -219,7 +219,7 @@
             </div>
             <div class="project_sub">
                 <div class="project_img">
-                   <img src="img/포트폴리오.png">
+                   <img src="./포트폴리오/img/포트폴리오.png">
                 </div>
                 <div class="project_detail">
                     <div>
